using System;

namespace CraftLR.Exercice8.Models;
public class Pokemon
{
    public int ID { get; set; }
    public string Name { get; set; }
    public Type Type { get; set; }
    public int Level { get; set; }
}