using ReactiveUI;

namespace CraftLR.MVVM.ViewModels;

public class ViewModelBase : ReactiveObject
{
}